Add SSE bcd2ascii version

--- a/x86_64/makefile
+++ b/x86_64/makefile
@@ -6,6 +6,11 @@ bcd2a: ../main_bcd2a.c bcd2ascii.S
 
 TEMP += bcd2a
 
+bcd2a-sse: ../main_bcd2a.c bcd2ascii-sse.S
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -o $@ $^
+
+TEMP += bcd2a-sse
+
 .PHONY: clean
 clean:
 	rm -f $(TEMP)
